[ci skip] Update translations (Romanian)

--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -340,7 +340,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="date_and_time">Data și ora</string>
     <string name="jump_to_bottom">Salt la jos</string>
     <string name="quote">Ofertă</string>
-    <string name="heading">Titlu</string>
+    <string name="heading">Subtitlu</string>
     <string name="heading_1">Subtitlu 1</string>
     <string name="heading_2">Titlu2</string>
     <string name="heading_3">Titlu3</string>
