--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 
     <string name="contributors">Contributors</string>
     <string name="save_location">Save location</string>
+    <string name="saved_location_to">Saved to %s</string>
     <string name="select_storage_folder">Select storage folder</string>
     <string name="licenses">Licenses</string>
     <string name="changelog">Changelog</string>
