--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 
     <string name="contributors">Contributors</string>
     <string name="save_location">Save location</string>
+    <string name="saved_location_to">Saved to %s</string>
     <string name="select_storage_folder">Select storage folder</string>
     <string name="licenses">Licenses</string>
     <string name="changelog">Changelog</string>
@@ -86,7 +87,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="show_third_party_licenses">Show 3rd party licenses</string>
     <string name="language_change_restart_description">Change language of this app. Restart app for changes to take effect</string>
     <string name="language">Language</string>
-    <string name="error_need_storage_permission_to_save_documents">Need permission for storage to save documents</string>
+    <string name="storage_permission_required">Storage permission required to read and write files</string>
     <string name="open_with">Open with</string>
     <string name="sort_by">Sort by</string>
     <string name="date">Date</string>
@@ -205,6 +206,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="unordered_list_char_asterisk">Asterisk (*)</string>
     <string name="unordered_list_char_plus">Plus (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">Markor can only edit local, offline available documents and does not support file managers that do not provide the full file path.</string>
+    <string name="file_does_not_exist_and_cant_be_created">File or directory does not exist and can not be created</string>
+    <string name="permissions">Permissions</string>
+    <string name="permission_paths_revert">Revert to default paths?</string>
+    <string name="permission_not_granted">Permission not granted</string>
     <string name="sync_to_local_folder_notice">Note: Sync apps may place files in custom folders. Open them by changing Markor\'s document folder accordingly, or in another file manager.</string>
     <string name="vertical_alignment">Vertical alignment</string>
     <string name="horizontal_alignment">Horizontal alignment</string>
