--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -174,6 +174,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="archive_does_move_done_tasks">Перемещать выполненные задачи в указанный файл в той же папке</string>
     <string name="sort_tasks_by_selected_order">Сортировать задачи в выбранном порядке</string>
     <string name="special_key">Специальная клавиша</string>
+    <string name="asciidoc_special_key">AsciiDoc особое</string>
     <string name="key_page_up">Листать вверх (Page Up)</string>
     <string name="key_page_down">Листать вниз (Page Down)</string>
     <string name="move_text_one_line_up">Переместить текст на строку вверх</string>
@@ -431,9 +432,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="match_all">Совпадение всех</string>
     <string name="dynamic_notebook_root_links">Динамический поиск корня блокнота</string>
     <string name="search_dynamically_for_notebook_root">Чтобы перейти по вики-ссылкам, необходимо динамически искать файл notebook.zim для определения корневого каталога текущей записной книжки. Установите флажок, если вы используете несколько цим-блокнотов или установленный в приложении каталог блокнота не соответствует вашему блокноту zim.</string>
+    <string name="share_into_format_prefix_for_text_shared">Формат/Префикс для текста, отправленного в Markor. Соответствует правилам Android SimpleDateFormat. \n\nИспользуйте переменную \'{{text}}\' (с одинарными кавычками) для размещения отправленного текста. Если не указано, отправленный текст добавляется и формат используется в качестве префикса.</string>
     <string name="share_into_format">Поделиться - Формат</string>
     <string name="auto_format">Автоформат</string>
     <string name="insert_snippet">Insert snippet</string>
     <string name="error_could_not_open_file">Ошибка: Не удалось открыть файл.</string>
     <string name="document_error_clip">Произошла ошибка: текст скопирован в буфер обмена.</string>
+    <string name="wont_save_min_length">Файлы содержащие менее %d символов не сохраняются автоматически во избежание случайного удаления данных.</string>
+    <string name="advanced_filtering_help"><![CDATA[<small><a href="https://www.github.com/gsantner/markor/discussions/1940">Расширенный синтаксис фильтрации</a></small>]]></string>
 </resources>
