--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -57,7 +57,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="render_rtl_language">Renderizar para línguas de escrita da direita à esquerda</string>
     <string name="error_cannot_create_notebook_dir__appspecific">Erro: Impossível criar pasta de becape</string>
     <string name="last_modified_witharg">Últimas modificações: %s</string>
-    <string name="last_modified">Última modificação</string>
+    <string name="last_modified">Últimas modificações</string>
     <string name="select_this_folder">Selecionar esta pasta</string>
     <string name="select">Selecionar</string>
     <string name="create">Criar</string>
@@ -174,6 +174,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="archive_does_move_done_tasks">Mover tarefas feitas para o arquivo especificado na mesma pasta</string>
     <string name="sort_tasks_by_selected_order">Organizar tarefas pela ordem selecionada</string>
     <string name="special_key">Tecla Especial</string>
+    <string name="asciidoc_special_key">Special AsciiDoc Content</string>
     <string name="key_page_up">Página anterior (Page Up)</string>
     <string name="key_page_down">Página seguinte (Page Down)</string>
     <string name="move_text_one_line_up">Mova o texto uma linha a cima</string>
